pkglocalstatedir=${OFC_DATADIR}
dist_pkglocalstate_DATA=of-config.yin of-config.yang of-config-data.rng of-config-gdefs.rng of-config-schematron.xsl relaxng-lib.rng

ncserverdir=${pkglocalstatedir}/ietf-netconf-server
dist_ncserver_DATA=ietf-netconf-server.yin ietf-x509-cert-to-name.yin ietf-netconf-server.yang ietf-x509-cert-to-name.yang
