ofconfigmodeldir=${OFC_DATADIR}/of-config
dist_ofconfigmodel_DATA=of-config.yin of-config.yang of-config-config.rng of-config-gdefs-config.rng of-config-schematron.xsl relaxng-lib.rng

ietfmodeldir=${OFC_DATADIR}/ietf-netconf-server
dist_ietfmodel_DATA=ietf-netconf-server.yin ietf-x509-cert-to-name.yin ietf-netconf-server.yang ietf-x509-cert-to-name.yang
