modeldir=${OFC_DATADIR}/
dist_model_DATA=relaxng-lib.rng

ofconfigmodeldir=${OFC_DATADIR}/of-config
dist_ofconfigmodel_DATA=of-config.yin of-config.yang of-config-config.rng of-config-gdefs-config.rng of-config-schematron.xsl

ietfmodeldir=${OFC_DATADIR}/ietf-netconf-server
dist_ietfmodel_DATA=ietf-netconf-server.yin ietf-x509-cert-to-name.yin ietf-netconf-server.yang ietf-x509-cert-to-name.yang ietf-netconf-server-config.rng ietf-netconf-server-gdefs-config.rng ietf-netconf-server-schematron.xsl
